# encor

./: .dockerignore  .gitignore  Dockerfile  README.md  docker-compose.yml  manage.py  pyproject.toml
.devcontainer/: devcontainer.json
.github/workflows/: test.yml
encor/: asgi.py  settings.py  urls.py  wsgi.py
encor_app/: admin.py  apps.py  forms.py  models.py  tests.py  urls.py  views.py
encor_app/migrations/: 0001_initial.py  0002_plan_color.py  0003_request_color.py  0004_rename_request_offer.py
encor_app/static/encor_app/: user_calendar.js
encor_app/static/encor_app/css/: 404.css  style.css
encor_app/templates/encor_app/: index.html  layout.html  mypage.html  plans_new.html  signin.html  signup.html  user_calendar.html  user_not_found.html
staticfiles/encor_app/: calendar.js  user_calendar.js
staticfiles/encor_app/css/: style.css
