[tool.poetry]
name = "project-encor"
version = "0.1.0"
description = ""
authors = ["rayjasm <ray@aiueo.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.11"
django = "4.2.5"
mysqlclient = "^2.2.4"


[tool.poetry.group.dev.dependencies]
flake8 = "^7.1.1"
black = "^24.8.0"
isort = "^5.13.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
